Rockbox supports not only 1bpp BMPs
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20518 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/appendix/wps_tags.tex
+++ b/manual/appendix/wps_tags.tex
@@ -264,7 +264,7 @@ with image ID ``M'', and then reference the individual sub-images in a condition
 
 \note{
   \begin{itemize}
-  \item The images must be in a rockbox compatible format (1 bit per pixel BMP)
+  \item The images must be in BMP format
   \item The image tag must be on its own line
   \item The ID is case sensitive, giving 52 different ID's
   \item The size of the LCD screen for each player varies. See table below 
