--- a/apps/lang/nederlands.lang
+++ b/apps/lang/nederlands.lang
@@ -12333,3 +12333,54 @@
     *: "Als cijfers"
   </voice>
 </phrase>
+<phrase>
+  id: LANG_TOUCHSCREEN_MODE
+  desc: in Settings -> General -> System menu
+  user: core
+  <source>
+    *: none
+    touchscreen: "Touchscreen Mode"
+  </source>
+  <dest>
+    *: none
+    touchscreen: "Touchscreen modus"
+  </dest>
+  <voice>
+    *: none
+    touchscreen: "Touchscreen modus"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_TOUCHSCREEN_GRID
+  desc: in Settings -> General -> System menu
+  user: core
+  <source>
+    *: none
+    touchscreen: "3x3 Grid"
+  </source>
+  <dest>
+    *: none
+    touchscreen: "3x3 raster"
+  </dest>
+  <voice>
+    *: none
+    touchscreen: "3 bij 3 raster"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_TOUCHSCREEN_POINT
+  desc: in Settings -> General -> System menu
+  user: core
+  <source>
+    *: none
+    touchscreen: "Absolute Point"
+  </source>
+  <dest>
+    *: none
+    touchscreen: "Absolute modus"
+  </dest>
+  <voice>
+    *: none
+    touchscreen: "Absolute modus"
+  </voice>
+</phrase>
