FS#10014 - Separate tracklocking out of skip length, skip length prevented to skip tracks. This is a seperate setting now. tracks can still change during normal playback (i.e. a song ends).
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20553 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/english.lang
+++ b/apps/lang/english.lang
@@ -12454,3 +12454,17 @@
     touchscreen: "Absolute Point"
   </voice>
 </phrase>
+<phrase>
+  id: LANG_PREVENT_SKIPPING
+  desc: in Settings -> Playback Settings
+  user: core
+  <source>
+    *: "Prevent Skipping"
+  </source>
+  <dest>
+    *: "Prevent Skipping"
+  </dest>
+  <voice>
+    *: "Prevent Skipping"
+  </voice>
+</phrase>
