Document the prevent skipping option in the manual, plus a few fixes for skip length. Also, remove the underscore in the config.cfg setting name.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20555 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/appendix/config_file_options.tex
+++ b/manual/appendix/config_file_options.tex
@@ -128,7 +128,9 @@
     \opt{usb_charging}{
       usb charging  & on, off           & N/A\\
     }
-    skip length     & track, 1, 2, 3, 4, 5, 10, 15 & minutes\\
+    skip length     & track, 1s, 2s, 3s, 5s, 7s, 10s, 15s, 20s, 1min,
+            90s, 2min, 3min, 5min, 10min, 15min & N/A\\
+    prevent skip    & on, off           & N/A\\
     start in screen & previous, root, files, db, wps, menu,
       \opt{recording}{recording, }
       \opt{radio}{radio, }
