--- a/manual/configure_rockbox/playback_options.tex
+++ b/manual/configure_rockbox/playback_options.tex
@@ -259,12 +259,14 @@ you to configure settings related to audio playback.
   effect.
   
 \section{Skip Length}\index{Skip Length}
-  Designed to speed up navigation and prevent unintentional track skipping when
-  listening to long audio tracks, \setting{Skip Length} changes the behavior of
+  Designed to speed up navigation when listening to long audio tracks,
+  \setting{Skip Length} changes the behavior of
   the \ActionWpsSkipPrev{} and \ActionWpsSkipNext{} buttons so that they skip
-  by a given number of minutes instead of skipping to a new track.
+  by a given time instead of skipping to a new track.
 
-  \note{To skip tracks with this setting set to a time interval, press Short 
-    \ActionWpsSkipPrev{} + Long \ActionWpsSkipNext{} to go forward and Short 
-    \ActionWpsSkipNext{} + Long \ActionWpsSkipPrev{} to go back.}
+\section{Prevent Skipping}\index{Prevent Skipping}
+  If this option is enabled, the ability to manually skip tracks is disabled
+  in order to avoid accidental track skips. It does not prevent changing tracks
+  if a track ends, which can be achieved by combining this option with
+  \setting{Repeat} set to \setting{One}
 
