Change "Prevent Skipping" to "Prevent track skipping" which is a more accurate name.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20556 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/english.lang
+++ b/apps/lang/english.lang
@@ -12459,12 +12459,12 @@
   desc: in Settings -> Playback Settings
   user: core
   <source>
-    *: "Prevent Skipping"
+    *: "Prevent Track Skipping"
   </source>
   <dest>
-    *: "Prevent Skipping"
+    *: "Prevent Track Skipping"
   </dest>
   <voice>
-    *: "Prevent Skipping"
+    *: "Prevent Track Skipping"
   </voice>
 </phrase>
