--- a/manual/appendix/config_file_options.tex
+++ b/manual/appendix/config_file_options.tex
@@ -130,7 +130,8 @@
     }
     skip length     & track, 1s, 2s, 3s, 5s, 7s, 10s, 15s, 20s, 1min,
             90s, 2min, 3min, 5min, 10min, 15min & N/A\\
-    prevent skip    & on, off           & N/A\\
+    prevent track skip
+                    & on, off           & N/A\\
     start in screen & previous, root, files, db, wps, menu,
       \opt{recording}{recording, }
       \opt{radio}{radio, }
