--- a/manual/configure_rockbox/playback_options.tex
+++ b/manual/configure_rockbox/playback_options.tex
@@ -264,7 +264,7 @@ you to configure settings related to audio playback.
   the \ActionWpsSkipPrev{} and \ActionWpsSkipNext{} buttons so that they skip
   by a given time instead of skipping to a new track.
 
-\section{Prevent Skipping}\index{Prevent Skipping}
+\section{Prevent Track Skipping}\index{Prevent Track Skipping}
   If this option is enabled, the ability to manually skip tracks is disabled
   in order to avoid accidental track skips. It does not prevent changing tracks
   if a track ends, which can be achieved by combining this option with
