Add a few missing filetypes to Appendix A (File Formats) of the manual.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20588 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/appendix/file_formats.tex
+++ b/manual/appendix/file_formats.tex
@@ -31,7 +31,7 @@
 \includegraphics[width=0.37cm]{appendix/images/icon-wps.png} 
   & While Playing Screen & \fname{.wps} & Load the new WPS display configuration \\
 \includegraphics[width=0.37cm]{appendix/images/icon-lang.png} 
-  & Language File & \fname{.lng} & Load the language file \\
+  & Language File & \fname{.lng} & Load the lan\guage file \\
 \includegraphics[width=0.37cm]{appendix/images/icon-text.png} 
   & Text File & \fname{.txt} & Display the text file using the text viewer plugin\\
 \includegraphics[width=0.37cm]{appendix/images/icon-config.png} 
@@ -52,6 +52,10 @@
   \includegraphics[width=0.37cm]{appendix/images/icon-movie-file.png} 
     & Rockbox Video & \fname{.rvf} & View the movie (Rockbox format)\\}
 }
+\opt{radio}[
+  & FM Preset & \fname{.fmr} & Loads FM Presets of your choosing\\}
+  & Voice file & \fname{.voice} & Allows Rockbox to speak menus for you\\
+  & Bookmark & \fname{.bmark} & Displays all bookmarks for an audio file\\
   & Link & \fname{.link} & Display list of target files and directories;
     selecting one jumps to the target. See \reference{ref:Shortcutsplugin}.\\
 \opt{lcd_color}{
