Whoops... butterfingers! :) Remove a backslash that would've broken something.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20589 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/appendix/file_formats.tex
+++ b/manual/appendix/file_formats.tex
@@ -31,7 +31,7 @@
 \includegraphics[width=0.37cm]{appendix/images/icon-wps.png} 
   & While Playing Screen & \fname{.wps} & Load the new WPS display configuration \\
 \includegraphics[width=0.37cm]{appendix/images/icon-lang.png} 
-  & Language File & \fname{.lng} & Load the lan\guage file \\
+  & Language File & \fname{.lng} & Load the language file \\
 \includegraphics[width=0.37cm]{appendix/images/icon-text.png} 
   & Text File & \fname{.txt} & Display the text file using the text viewer plugin\\
 \includegraphics[width=0.37cm]{appendix/images/icon-config.png} 
