Fix the typo that made the manual build to fail
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20595 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/appendix/file_formats.tex
+++ b/manual/appendix/file_formats.tex
@@ -52,7 +52,7 @@
   \includegraphics[width=0.37cm]{appendix/images/icon-movie-file.png} 
     & Rockbox Video & \fname{.rvf} & View the movie (Rockbox format)\\}
 }
-\opt{radio}[
+\opt{radio}{
   & FM Preset & \fname{.fmr} & Loads FM Presets of your choosing\\}
   & Voice file & \fname{.voice} & Allows Rockbox to speak menus for you\\
   & Bookmark & \fname{.bmark} & Displays all bookmarks for an audio file\\
