Updated italian translation.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20603 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/italiano.lang
+++ b/apps/lang/italiano.lang
@@ -12383,3 +12383,17 @@
     touchscreen: "Punto Assoluto"
   </voice>
 </phrase>
+<phrase>
+  id: LANG_PREVENT_SKIPPING
+  desc: in Settings -> Playback Settings
+  user: core
+  <source>
+    *: "Prevent Track Skipping"
+  </source>
+  <dest>
+    *: "Previene Salto Traccia"
+  </dest>
+  <voice>
+    *: "Previene Salto Traccia"
+  </voice>
+</phrase>
