--- a/manual/appendix/file_formats.tex
+++ b/manual/appendix/file_formats.tex
@@ -48,6 +48,10 @@
   & Chip8 game & \fname{.ch8} & Play the Chip8 game \\
 \includegraphics[width=0.37cm]{appendix/images/icon-image-file.png} 
   & Image & \fname{.jpg} & View the JPEG image \\
+\opt{swcodec}{
+ \includegraphics[width=0.37cm]{appendix/images/icon-movie-file.png}
+ & Video & \fname{.mpg, .mpeg, .mpv, .m2v} & Play the MPEG1/2 video \\
+}
 \opt{MASCODEC}{\opt{lcd_bitmap}{
   \includegraphics[width=0.37cm]{appendix/images/icon-movie-file.png} 
     & Rockbox Video & \fname{.rvf} & View the movie (Rockbox format)\\}
