Add a short description of the rocklife plugin to the manual. Also add the .cells files to the table of supported files.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20613 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/appendix/file_formats.tex
+++ b/manual/appendix/file_formats.tex
@@ -68,6 +68,10 @@
   & Colours & \fname{.colours} & Open the colours file for editing.
     See \reference{ref:ChangingFiletypeColours}.\\
 }
+\opt{lcd_bitmap}{
+  & Game of Life & \fname{.cells} & Show the configuration with the
+     ``Rocklife'' plugin\\}
+
 \bottomrule
 \end{tabularx}
 \end{center}
