--- a/manual/plugins/main.tex
+++ b/manual/plugins/main.tex
@@ -62,6 +62,8 @@ text files%
 
 \opt{lcd_bitmap}{\input{plugins/rockblox1d.tex}}
 
+\opt{lcd_bitmap}{\input{plugins/rocklife.tex}}
+
 \opt{lcd_bitmap}{\input{plugins/sliding.tex}}
 
 \opt{lcd_bitmap}{\input{plugins/snake.tex}}
