Use the verbs (in the action description) in the same form for all file formats
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20614 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/appendix/file_formats.tex
+++ b/manual/appendix/file_formats.tex
@@ -59,9 +59,9 @@
     & Rockbox Video & \fname{.rvf} & View the movie (Rockbox format)\\}
 }
 \opt{radio}{
-  & FM Preset & \fname{.fmr} & Loads FM Presets of your choosing\\}
-  & Voice file & \fname{.voice} & Allows Rockbox to speak menus for you\\
-  & Bookmark & \fname{.bmark} & Displays all bookmarks for an audio file\\
+  & FM Presets & \fname{.fmr} & Load the FM Presets (previous are discarded)\\}
+  & Voice file & \fname{.voice} & Allow Rockbox to speak menus\\
+  & Bookmark & \fname{.bmark} & Display all bookmarks for an audio file\\
   & Link & \fname{.link} & Display list of target files and directories;
     selecting one jumps to the target. See \reference{ref:Shortcutsplugin}.\\
 \opt{lcd_color}{
