Pictureflow chapter, hwcodec target manuals: add a note about the plugin stopping playback.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20655 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/plugins/pictureflow.tex
+++ b/manual/plugins/pictureflow.tex
@@ -3,6 +3,10 @@
 PictureFlow is a plugin that provides a visualisation of your albums with
 their associated cover art.
 
+\opt{hwcodec}{
+\note{This plugin will cause playback to stop.}
+}
+
 \subsubsection{Requirements}
 PictureFlow uses both the album art (see \reference{ref:album_art}) and 
 database (see \reference{ref:database}) features of Rockbox.
