--- a/manual/main_menu/main.tex
+++ b/manual/main_menu/main.tex
@@ -249,15 +249,15 @@ pages of information.}
   for more details.
 }
 
-\nopt{PLAYER_PAD,ONDIO_PAD}
+\opt{quickscreen}
 {
 \section{\label{ref:QuickScreen}Quick Screen}
   Although the \setting{Quick Screen} is accessible from nearly everywhere,
   not just the \setting{Main Menu}, it is worth mentioning here.  It allows
   rapid access to your three favourite settings.  The default settings are
-  \setting{Shuffle} (\reference{ref:PlaybackSettings}), 
-  \setting{Repeat} (\reference{ref:PlaybackSettings}) and the 
-  \setting{Show Files} (\reference{ref:ShowFiles}) options, but almost all 
+  \setting{Shuffle} (\reference{ref:PlaybackSettings}),
+  \setting{Repeat} (\reference{ref:PlaybackSettings}) and the
+  \setting{Show Files} (\reference{ref:ShowFiles}) options, but almost all
   configurable options in Rockbox can be placed on this screen.  To change the
   options, navigate through the menus to the setting you want to add and press
   \ActionStdContext.  In the menu which appears you will be given options
