--- a/manual/rockbox_interface/browsing_and_playing.tex
+++ b/manual/rockbox_interface/browsing_and_playing.tex
@@ -80,11 +80,9 @@ the \setting{Show Files} setting to all.
       \ActionStdMenu{}
       & Enter the \setting{Main Menu}\\
       %
-      \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,SANSA_E200_PAD,SANSA_C200_PAD%
-          ,GIGABEAT_PAD,MROBE100_PAD,IAUDIO_X5_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IRIVER_H10_PAD}{
+      \opt{quickscreen}{
         \ActionStdQuickScreen & Switches to the \setting{Quick Screen}
         (see \reference{ref:QuickScreen}) \\
-        %
       }
       \opt{RECORDER_PAD}{
         \ButtonFThree & Switches to the Display Quick Screen \\ 
