Update Dutch language
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20763 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/nederlands.lang
+++ b/apps/lang/nederlands.lang
@@ -12384,3 +12384,17 @@
     touchscreen: "Absolute modus"
   </voice>
 </phrase>
+<phrase>
+  id: LANG_PREVENT_SKIPPING
+  desc: in Settings -> Playback Settings
+  user: core
+  <source>
+    *: "Prevent Track Skipping"
+  </source>
+  <dest>
+    *: "Voorkom nummers overslaan"
+  </dest>
+  <voice>
+    *: "Voorkom nummers overslaan"
+  </voice>
+</phrase>
