Update jz4740_tools README
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20770 a1c6a512-1295-4272-9138-f99709370657

--- a/utils/jz4740_tools/README
+++ b/utils/jz4740_tools/README
@@ -6,7 +6,8 @@
 *******************************************************************************
 
 To compile usbtools, you'll need jz_xloader (which can be get at
-http://repo.or.cz/w/jz_xloader.git).
+http://repo.or.cz/w/jz_xloader.git, do
+"git clone git://repo.or.cz/jz_xloader.git ." for a clone in the current dir).
 
 When you're on Linux, just type "make linux" to compile all the utilities (make
 sure you have libusb-dev installed).
