Fix wrong path to "Recursively Insert Directories" setting. Thanks to Grahack on IRC for pointing it out.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20798 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/working_with_playlists/main.tex
+++ b/manual/working_with_playlists/main.tex
@@ -181,7 +181,7 @@ It can be used like the \setting{File Browser}.
 \subsubsection{Including subdirectories in playlists}
 You can control whether or not Rockbox includes the contents of
 subdirectories when adding an entire directory to a playlists.
-Set the \setting{Main Menu $\rightarrow$ Settings $\rightarrow$ Playlist
-$\rightarrow$ Recursively Insert Directories} setting to \setting{Yes} if you
-would like to include tracks in subdirectories as well as tracks in the
-currently selected directory.
+Set the \setting{Main Menu $\rightarrow$ Settings $\rightarrow$ General Settings
+$\rightarrow$ Playlists $\rightarrow$ Recursively Insert Directories}
+setting to \setting{On} if you would like to include tracks in subdirectories
+as well as tracks in the currently selected directory.
